--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FitnessTrac.kr</title>
-    <link rel="stylesheet" href="style.css">
+    <!-- load application bundle asynchronously -->
+    <script async src="/App.js"></script>
+    <style type="text/css">
+        /* pre-rendered critical path CSS (see isomorphic-style-loader) */
+    </style>
 </head>
 
 <body>
-    <div id="App"></div>
+    <div id="App">
+        <!-- pre-rendered markup of your JavaScript app (see isomorphic apps) -->
+    </div>
 </body>
 
 </html>
