--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,15 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-    <title>FitnessTrac.kr</title>
-    <!-- load application bundle asynchronously -->
-    <script async src="/App.js"></script>
-    <style type="text/css">
-        /* pre-rendered critical path CSS (see isomorphic-style-loader) */
-    </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Stranger's Things</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div id="App">
-        <!-- pre-rendered markup of your JavaScript app (see isomorphic apps) -->
-    </div>
+    <div id="app"></div>
 </body>
 
 </html>
