added JL code; still no display

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div id="App"></div>
+<div id="root"></div>
 </body>
-
+<script type="javascript" src="public/bundle.js"> </script>
 </html>
